# privilegeescalationproject

./: CMakeLists.txt  README.md  uacme.sln
Akagi/: CMakeLists.txt  Resource.rc  Resource1.rc  export.def  global.h  goalz.txt  main.c  mycode.c  mycode.h  resource.h  stub.c  uacme.vcxproj  uacme.vcxproj.filters
Akagi/methods/: methods.c  shellsup.c  tyranid.c
Akagi/output/Win32/ReleaseInternalDll/: _filename.nativecodeanalysis.sarif  _strcat.nativecodeanalysis.sarif  _strcmp.nativecodeanalysis.sarif  _strcmpi.nativecodeanalysis.sarif  _strcpy.nativecodeanalysis.sarif  _strend.nativecodeanalysis.sarif  _strlen.nativecodeanalysis.sarif  _strncmp.nativecodeanalysis.sarif  _strncmpi.nativecodeanalysis.sarif  _strncpy.nativecodeanalysis.sarif  _strstri.nativecodeanalysis.sarif  aic.nativecodeanalysis.sarif  strtoul.nativecodeanalysis.sarif  u64tohex.nativecodeanalysis.sarif  u64tostr.nativecodeanalysis.sarif  ultohex.nativecodeanalysis.sarif  ultostr.nativecodeanalysis.sarif  windefend.nativecodeanalysis.sarif
Akagi/output/Win32/ReleaseInternalDll/Akagi.tlog/: Akagi.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Akatsuki/: Akatsuki.vcxproj  CMakeLists.txt  dllmain.c
Fubuki/: CMakeLists.txt  dll.vcxproj  dllmain.c
Naka/: CMakeLists.txt  main.c
Shared/: callz.c  callz.h  callzstubs.asm  consts.h
Yuubari/: CMakeLists.txt  global.h
